--- a/css/style.css
+++ b/css/style.css
@@ -1,213 +1,470 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    vertical-align: baseline;
-    background: transparent;
-    font-weight: normal;
-    text-decoration: none;
-    outline: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  ol,
-  ul {
-    list-style: none;
-  }
-  
-  del {
-    text-decoration: line-through;
-  }
-  
-  body {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    color: #000;
-    overflow-x: hidden;
-    min-width: 320px;
-    font-weight: 500;
-  }
-  
-  input,
-  textarea,
-  select {
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
-    font-weight: 500;
-  }
-  
-  a {
-    color: #000;
-  }
-  
-  .thumb {
-    display: block;
-  }
-  
-  .thumb img {
-    display: block;
-    width: 100%;
-  }
-  
-  p {
-    line-height: 1.6em;
-    font-size: 16px;
-    font-family: "Poppins", Arial;
-    font-weight: 500;
-    color: #000;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
-  br.clear {
-    clear: both;
-    line-height: 0;
-  }
-  
-  .wrapper {
-    width: 90%;
-    margin: 0 auto;
-    max-width: 1200px;
-  }
-  
-  .flex-wrapper {
-    display: flex;
-    justify-content: space-between;
-  }
-  @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+  background: transparent;
+  font-weight: normal;
+  text-decoration: none;
+  outline: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+body {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  color: #000;
+  overflow-x: hidden;
+  min-width: 320px;
+  font-weight: 500;
+}
+
+input,
+textarea,
+select {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+}
+
+a {
+  color: #000;
+}
+
+.thumb {
+  display: block;
+}
+
+.thumb img {
+  display: block;
+  width: 100%;
+}
+
+p {
+  line-height: 1.6em;
+  font-size: 16px;
+  font-family: "Poppins", Arial;
+  font-weight: 500;
+  color: #000;
+}
+
+.hidden {
+  display: none;
+}
+
+br.clear {
+  clear: both;
+  line-height: 0;
+}
+
+.wrapper {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.flex-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Light.woff2') format('woff2');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-SemiBold.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins-Bold.woff2') format('woff2');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-ExtraBold.woff2') format('woff2');
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-ExtraBold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-ExtraLight.woff2') format('woff2');
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-ExtraLight.woff2") format("woff2");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('../fonts/Poppins-Thin.woff2') format('woff2');
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Thin.woff2") format("woff2");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
-header{
+#hero {
+  /* height: 100vh; */
+  padding-bottom: 150px;
+}
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100px;
+  height: 80px;
 }
-#hero header nav.left {}
-#hero header nav.left a {}
-#hero header nav.left a img {}
-#hero header nav.middle  {}
+#hero header nav.left {
+
+}
+#hero header nav.left a {
+}
+#hero header nav.left a img {
+}
+#hero header nav.middle {
+}
 #hero header nav.middle h1 {
   letter-spacing: 8px;
   font-weight: 600;
   font-size: 32px;
 }
-#hero header nav.middle a  {
+#hero header nav.middle a {
   letter-spacing: 8px;
   font-weight: 600;
   font-size: 32px;
 }
-#hero header nav.right  {}
+#hero header nav.right {
+}
 #hero header nav.right ul {
   display: flex;
   justify-content: space-between;
   width: 30%;
 }
-#hero header nav.right ul li{
+#hero header nav.right ul li {
   margin-left: 20px;
 }
-#hero header nav.right ul li:first-child{
+#hero header nav.right ul li:first-child {
   margin-left: 0;
 }
-#hero header nav.right ul li a{
+#hero header nav.right ul li a {
   position: relative;
 }
-#hero header nav.right ul li a img{}
-#hero header nav.right ul li a div.eight{
+#hero header nav.right ul li a img {
+}
+#hero header nav.right ul li a div.eight {
   border-radius: 50%;
-  background: #E41D1D;
+  background: #e41d1d;
   color: #fff;
   text-align: center;
-  width: 23px;;
+  width: 23px;
   position: absolute;
   border: 2px solid #fff;
   right: -5px;
-
 }
-#hero header nav.right ul li a div.eight span{
+#hero header nav.right ul li a div.eight span {
   font-size: 12px;
   display: block;
 }
-#hero header nav.right ul li a div.bag{
+#hero header nav.right ul li a div.bag {
   border-radius: 50%;
-  background:yellow;
+  background: yellow;
   color: #000;
   text-align: center;
-  width: 23px;;
+  width: 23px;
   position: absolute;
   border: 2px solid #fff;
   right: -5px;
 }
-#hero header nav.right ul li a div.bag span{
+#hero header nav.right ul li a div.bag span {
   font-size: 12px;
   display: block;
   font-weight: 600;
 }
+#hero #spotlight{
+  display: flex;
+  height: calc(100vh - 80px);
+}
+#hero #spotlight section.left{
+  width: 60%;
 
-#hero #spolight{}
-#hero #spolight section.left{}
-#hero #spolight section.left ul{ }
-#hero #spolight section.left ul li{}
+}
+#hero #spotlight section.left div.top{
+  width: 100%;
+  position: relative;
+}
+#hero #spotlight section.left div.top ul{}
+#hero #spotlight section.left div.top ul li{}
+#hero #spotlight section.left div.top ul li a{
+    font-size: 15px;
+}
+#hero #spotlight section.left div.top ul li:last-child a{
+  color: #777;
+}
+#hero #spotlight section.left div.bottom {
+  display: flex;
+  flex-direction: column;
+  align-items:flex-end ;
+  width: 80%;
 
+}
+#hero #spotlight section.left div.content {
+  position: absolute;
+  right: 0;
+  top: 250px;
+  width: 70%;
+}
+#hero #spotlight section.left  div.content h4{
+  font-size: 32px;
+  font-weight: 600;
+}
+#hero #spotlight section.left  div.content p {
+  color: #777;
+  margin-bottom: 20px;
+  
+}
+#hero #spotlight section.left  div.content a.button {
+  padding: 15px 30px;
+  background: #000;
+  color: #fff;
+  border-radius: 5px;
+}
+
+#hero #spotlight section.left div.bottom div.bottom.part {
+}
+#hero #spotlight section.left div.bottom div.bottom.part ul.line {
+  display: flex;
+  justify-content: space-between;
+}
+#hero #spotlight section.left div.bottom div.bottom.part ul.line li:first-child hr.line {
+ border: 1px solid #e41d1d;
+ width: 80px;
+}
+#hero #spotlight section.left div.bottom div.bottom.part ul.line li hr.line {
+  border: 1px solid #000;
+  width: 50px;
+}
+#hero #spotlight section.left div.bottom div.bottom.part div.arrow {
+ 
+}
+#hero #spotlight section.left div.bottom div.bottom.part div.arrow a {
+  border: 1px solid #777;
+  padding: 10px;
+  text-align: center;
+}
+#hero #spotlight section.left div.bottom div.bottom.part div.arrow a:first-child img {
+  transform: rotate(180deg);
+}
+#hero #spotlight section.right {
+  width: 50%;
+}
+#hero #spotlight section.right div.imgcontainer{
+  display: inline-block;
+  width: 100%;
+}
+#hero #spotlight section.right div.imgcontainer img{
+  width: 100%;
+  /* height: 425px; */
+  
+}
+#hero #spotlight section.right div.content{
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: space-between;
+}
+#hero #spotlight section.right div.content small{
+  color: #777;
+  display: inline-block;
+  width: 70%;
+}
+#hero #spotlight section.right div.content h4{
+  display: inline-block;
+  font-size: 14px;
+  font-weight: bolder;
+}
+#hero #spotlight section.right div.content h4 a{
+  display: flex;
+  align-items: center;
+}
+#hero #spotlight section.right div.content h4 a img{
+  width: 10%;
+  display: block;
+}
+#products { 
+  background: url(../images/Bg-lines.png);
+  background-repeat: no-repeat;
+  padding-top:30px;
+  background-position-x: right;
+    background-position-y: 20px;
+  
+}
+
+#products section.wrapper { 
+
+}
+
+#products section.wrapper div.head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px; 
+  
+
+}
+
+#products section.wrapper div.head h4 { 
+  font-weight: 600;
+  max-width: 45%;
+  font-size: 32px;
+ 
+
+}
+
+#products section.wrapper div.head a.button { 
+  font-weight:600;
+  background: #fff;
+
+}
+
+#products section.wrapper div.head a.button img { 
+  width: 15%;
+
+}
+
+#products section.wrapper div.tail { 
+
+
+}
+
+#products section.wrapper div.tail ul { 
+
+  display: flex;
+  justify-content: space-between;
+}
+
+#products section.wrapper div.tail ul li { 
+  width: 13%;
+  
+
+}
+#products section.wrapper div.tail ul li:first-child{
+   margin-top: 150px;
+
+}
+#products section.wrapper div.tail ul li:nth-child(2){
+  margin-top: 150px;
+
+}#products section.wrapper div.tail ul li:nth-child(2){
+  margin-top: 150px;
+  width: 4%;
+}
+#products section.wrapper div.tail ul li:nth-child(2) a {
+  width: 25%;
+  
+}
+#products section.wrapper div.tail ul li:nth-child(2) a img {
+  width: 100%;
+  transform: rotate(180deg);
+  
+}
+
+#products section.wrapper div.tail ul li:nth-child(4){
+   margin-top: 150px;
+
+}
+#products section.wrapper div.tail ul li:nth-child(5) {
+  position: relative;
+}
+#products section.wrapper div.tail ul li:nth-child(5) div.sale{
+background: #e41d1d;
+display: inline-block;
+color: #fff;
+position: absolute;
+top: 195px;
+padding: 8px;
+
+}
+#products section.wrapper div.tail ul li:nth-child(6){
+   margin-top: 150px;
+   width: 5%;
+  
+
+}
+#products section.wrapper div.tail ul li:nth-child(6) a{
+  display: inline-block;
+  width: 80%;
+  margin-left: 80%;
+}
+#products section.wrapper div.tail ul li:nth-child(6) a img{
+
+  width: 100%;
+
+}
+#products section.wrapper div.tail ul li:last-child{
+   margin-top: 150px;
+
+}
+#products section.wrapper div.tail ul li div.photo { 
+ 
+
+}
+
+#products .wrapper .tail ul li .photo img { 
+  width: 100%;
+
+}
+
+#products .wrapper .tail ul li a { 
+
+}
+
+#products .wrapper .tail ul li a h5 { 
+  font-size: 15px;
+  font-weight: 600;
+
+}
+
+#products .wrapper .tail ul li a small { 
+  color: #777;
+  max-width: 20%;
+
+}
+
+#products .wrapper .tail ul li a h4 { 
+  font-weight: 600;
+}
