--- a/css/style.css
+++ b/css/style.css
@@ -468,3 +468,87 @@ padding: 8px;
 #products .wrapper .tail ul li a h4 { 
   font-weight: 600;
 }
+#girl{
+  padding-top: 100px;
+}
+#girl section.wrapper{
+  display: flex;
+}
+#girl section.wrapper div.left{
+  position: relative;
+}
+#girl section.wrapper div.left div.pic{
+  width: 100%;
+}
+#girl section.wrapper div.left div.pic img{
+  width: 100%;
+}
+#girl section.wrapper div.left div.description{
+  background: #000;
+  position: absolute;
+  padding: 30px 0 30px 30px;
+  width: 75%;
+  bottom: 8px;
+  
+  
+}
+#girl section.wrapper div.left div.description h6{
+  font-size: 15px;
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: #777;
+}
+#girl section.wrapper div.left div.description p{
+  color: #fff;
+  font-size: 24px;
+  
+
+
+}
+#girl section.wrapper div.left div.description span{
+ 
+}
+#girl section.wrapper div.left div.description span a{
+  color: #777;
+  font-weight: 600;
+}
+#girl section.wrapper div.left div.description span a img{
+  width: 15px;
+}
+#girl section.wrapper div.right{
+  position: relative;
+}
+#girl section.wrapper div.right div.pic{
+  width: 100%;
+}
+#girl section.wrapper div.right div.pic img{
+  width: 100%;
+}
+#girl section.wrapper div.right div.description{
+  background:#e9dbb4;
+  position: absolute;
+  padding: 30px 30px 30px 30px;
+  width: 75%;
+  top: 0;
+  right: 0;
+}
+#girl section.wrapper div.right div.description h6{
+  font-size: 15px;
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: #777;
+}
+#girl section.wrapper div.right div.description p{
+  color:#747474;
+  font-size: 24px;
+  font-weight: 600;
+  
+}
+#girl section.wrapper div.right div.description span{}
+#girl section.wrapper div.right div.description span a{
+  color: #777;
+  font-weight: 600;
+}
+#girl section.wrapper div.right div.description span a img{
+  width: 15px;
+}
