--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ br.clear {
 }
 
 .wrapper {
-  width: 90%;
+  width: 85%;
   margin: 0 auto;
   max-width: 1200px;
 }
@@ -143,6 +143,9 @@ br.clear {
   /* height: 100vh; */
   padding-bottom: 150px;
 }
+#hero section.wrapper{
+
+}
 header {
   display: flex;
   justify-content: space-between;
@@ -159,12 +162,10 @@ header {
 #hero header nav.middle {
 }
 #hero header nav.middle h1 {
-  letter-spacing: 8px;
-  font-weight: 600;
-  font-size: 32px;
+
 }
 #hero header nav.middle a {
-  letter-spacing: 8px;
+  letter-spacing: 20px;
   font-weight: 600;
   font-size: 32px;
 }
@@ -176,7 +177,7 @@ header {
   width: 30%;
 }
 #hero header nav.right ul li {
-  margin-left: 20px;
+  margin-left: 8px;
 }
 #hero header nav.right ul li:first-child {
   margin-left: 0;
@@ -225,12 +226,15 @@ header {
 }
 #hero #spotlight section.left div.top{
   width: 100%;
-  position: relative;
+  /* position: relative; */
 }
-#hero #spotlight section.left div.top ul{}
-#hero #spotlight section.left div.top ul li{}
-#hero #spotlight section.left div.top ul li a{
-    font-size: 15px;
+#hero #spotlight section.left div.top div.ul{
+  font-size: 12px;
+}
+#hero #spotlight section.left div.top div.ul ul{}
+#hero #spotlight section.left div.top div.ul ul  li{}
+#hero #spotlight section.left div.top div.ul ul li a{
+    font-size: 13px;
 }
 #hero #spotlight section.left div.top ul li:last-child a{
   color: #777;
@@ -243,9 +247,9 @@ header {
 
 }
 #hero #spotlight section.left div.content {
-  position: absolute;
+  /* position: absolute; */
   right: 0;
-  top: 250px;
+
   width: 70%;
 }
 #hero #spotlight section.left  div.content h4{
@@ -290,14 +294,18 @@ header {
   transform: rotate(180deg);
 }
 #hero #spotlight section.right {
-  width: 50%;
+  width: 60%;
 }
 #hero #spotlight section.right div.imgcontainer{
   display: inline-block;
   width: 100%;
+  /* background-size: cover; */
+
+
 }
 #hero #spotlight section.right div.imgcontainer img{
   width: 100%;
+  display: block;
   /* height: 425px; */
   
 }
@@ -330,7 +338,8 @@ header {
   background-repeat: no-repeat;
   padding-top:30px;
   background-position-x: right;
-    background-position-y: 20px;
+  background-position-y: 20px;
+  background-size: cover;
   
 }
 
@@ -594,3 +603,4 @@ padding: 8px;
 #cloth section.wrapper div.tail div.pic a img{
   
 }
+
