--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,27 +42,27 @@
         bottom: 258px;
     }
 
-    #girl section.wrapper div.left div.description {
+    #article section.wrapper div.left div.description {
         padding: 20px 2px 20px 15px;
     }
 
-    #girl section.wrapper div.left div.description p {
+    #article section.wrapper div.left div.description p {
         font-size: 18px;
     }
 
-    #girl section.wrapper div.left div.description span a img {
+    #article section.wrapper div.left div.description span a img {
         width: 10px;
     }
 
-    #girl section.wrapper div.right div.description {
+    #article section.wrapper div.right div.description {
         padding: 20px 0 20px 15px;
     }
 
-    #girl section.wrapper div.right div.description p {
+    #article section.wrapper div.right div.description p {
         font-size: 18px;
     }
 
-    #girl section.wrapper div.right div.description span a img {
+    #article section.wrapper div.right div.description span a img {
         width: 10px;
     }
 }
@@ -106,10 +106,12 @@
     footer section.wrapper div.bottom div.last {
         width: 25%;
     }
-
 }
 
 @media all and (max-width: 980px) {
+    #hero {
+        padding-bottom: 80px;
+    }
 
     #hero #spotlight section.left div.top {
         display: none;
@@ -174,36 +176,36 @@
         width: 13%;
     }
 
-    #girl section.wrapper div.left div.description {
+    #article section.wrapper div.left div.description {
         padding: 11px 8px 12px 9px;
     }
 
-    #girl section.wrapper div.left div.description h6 {
+    #article section.wrapper div.left div.description h6 {
         font-size: 12px;
         margin-bottom: 5px;
 
     }
 
-    #girl section.wrapper div.left div.description p {
+    #article section.wrapper div.left div.description p {
         font-size: 15px;
     }
 
-    #girl section.wrapper div.right div.description span a {
+    #article section.wrapper div.right div.description span a {
         font-size: 14px;
         font-weight: 600;
     }
 
-    #girl section.wrapper div.right div.description h6 {
+    #article section.wrapper div.right div.description h6 {
         font-size: 12px;
         margin-bottom: 5px;
 
     }
 
-    #girl section.wrapper div.right div.description p {
+    #article section.wrapper div.right div.description p {
         font-size: 15px;
     }
 
-    #girl section.wrapper div.right div.description span a {
+    #article section.wrapper div.right div.description span a {
         font-size: 14px;
         font-weight: 600;
     }
@@ -221,6 +223,18 @@
     #contact section.wrapper div.bottom ul li span {
         font-size: 14px;
         max-width: 85%;
+    }
+
+    #cloth {
+        padding: 100px 0;
+    }
+
+    footer {
+        padding-top: 100px;
+    }
+
+    footer section.wrapper div.head {
+        padding-top: 70px;
     }
 
     footer section.wrapper div.head {
@@ -340,24 +354,32 @@
         bottom: 201px;
     }
 
-    #girl section.wrapper div.right div.description {
+    #article section.wrapper div.right div.description {
         padding: 18px 0 18px 15px;
     }
 
-    #girl section.wrapper div.left div.description p {
+    #article section.wrapper div.left div.description p {
         font-size: 12px;
     }
 
-    #girl section.wrapper div.left div.description span a {
+    #article section.wrapper div.left div.description span a {
         font-size: 12px;
     }
 
-    #girl section.wrapper div.right div.description p {
+    #article section.wrapper div.right div.description p {
         font-size: 12px;
     }
 
-    #girl section.wrapper div.right div.description span a {
+    #article section.wrapper div.right div.description span a {
         font-size: 12px;
+    }
+
+    #contact section.wrapper div.top {
+        text-align: center;
+    }
+
+    #contact section.wrapper div.top a.button {
+        font-size: 14px;
     }
 
     #cloth {
@@ -459,37 +481,37 @@
         width: 210px;
     }
 
-    #girl section.wrapper div.left div.description {
+    #article section.wrapper div.left div.description {
         padding: 6px 6px 0px 9px;
     }
 
-    #girl section.wrapper div.left div.description h6 {
+    #article section.wrapper div.left div.description h6 {
         font-size: 10px;
         margin-bottom: 5px;
     }
 
-    #girl section.wrapper div.left div.description p {
+    #article section.wrapper div.left div.description p {
         font-size: 9px;
     }
 
-    #girl section.wrapper div.left div.description span a {
+    #article section.wrapper div.left div.description span a {
         font-size: 11px;
     }
 
-    #girl section.wrapper div.right div.description {
+    #article section.wrapper div.right div.description {
         padding: 6px 6px 0px 9px;
     }
 
-    #girl section.wrapper div.right div.description h6 {
+    #article section.wrapper div.right div.description h6 {
         font-size: 10px;
         margin-bottom: 5px;
     }
 
-    #girl section.wrapper div.right div.description p {
+    #article section.wrapper div.right div.description p {
         font-size: 9px;
     }
 
-    #girl section.wrapper div.right div.description span a {
+    #article section.wrapper div.right div.description span a {
         font-size: 11px;
     }
 
@@ -525,167 +547,210 @@
     footer section.wrapper div.bottom div.last ul li a {
         font-size: 12px;
     }
-  /* 480px Checkpoint starts */
+
+    /* 480px Checkpoint starts */
 }
-@media all and (max-width: 480px){
-    #hero header nav.right ul li:nth-child(2){
+
+@media all and (max-width: 480px) {
+    #hero header nav.right ul li:nth-child(2) {
         display: none;
     }
-    #hero header nav.right ul li:last-child{
+
+    #hero header nav.right ul li:last-child {
         display: none;
     }
+
     #hero header nav.middle a {
         letter-spacing: 8px;
     }
+
     #hero #spotlight section.left div.content h4 {
         font-size: 18px;
         width: 150px;
         margin-bottom: 3px;
     }
+
     #hero #spotlight section.left div.content p {
         font-size: 10px;
     }
+
     #hero #spotlight section.left div.content a.button {
         font-size: 8px;
     }
-    #hero #spotlight section.right div.content span a{
+
+    #hero #spotlight section.right div.content span a {
         display: none;
     }
+
     #hero {
         padding-bottom: 40px;
     }
+
     #products section.wrapper div.head h4 {
         font-size: 18px;
     }
+
     #products section.wrapper div.tail ul li a small {
         width: 135px;
-        font-size: 10px;
+        font-size: 9px;
     }
+
     #products .wrapper .tail ul li a h5 {
         font-size: 12px;
     }
+
     #products section.wrapper div.tail ul li:nth-child(5) div.sale {
         padding: 5px;
         bottom: 68px;
     }
-    #girl section.wrapper {
+
+    #article section.wrapper {
         display: flex;
         flex-wrap: wrap;
     }
-    #girl section.wrapper div.left div.description {
+
+    #article section.wrapper div.left div.description {
         padding: 20px 8px 20px 15px;
     }
-    #girl section.wrapper div.left div.description p {
+
+    #article section.wrapper div.left div.description p {
         font-size: 12px;
     }
-    #girl section.wrapper div.right div.description {
+
+    #article section.wrapper div.right div.description {
         padding: 15px 8px 15px 15px;
     }
-    #girl section.wrapper div.right div.description p {
+
+    #article section.wrapper div.right div.description p {
         font-size: 12px;
     }
+
     #contact section.wrapper div.bottom ul li h5 {
         font-size: 12px;
     }
+
     #cloth {
         padding: 40px 0;
     }
+
     #contact section.wrapper div.top a.button {
 
         font-size: 9px;
     }
+
     footer section.wrapper div.head div.left h4 {
         font-size: 26px;
         font-weight: 600;
         letter-spacing: 15px;
         margin-bottom: 10px;
     }
+
     footer section.wrapper div.head div.left p {
         width: 100%;
         font-size: 14px;
     }
+
     footer section.wrapper div.head div.right div.list h5 {
         font-size: 16px;
         margin-bottom: 20px;
     }
 }
-@media all and (max-width: 360px){
+
+@media all and (max-width: 360px) {
     #hero header nav.middle a {
         letter-spacing: 6px;
         font-size: 18px;
     }
+
     #hero header nav.right ul {
         width: 65%;
     }
+
     #hero #spotlight {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
     }
-    #hero #spotlight section.left div.content h4{
+
+    #hero #spotlight section.left div.content h4 {
         text-align: center;
     }
-    #hero #spotlight section.left div.bottom div.content a.button{
-            display: flex;
-            justify-content: center;
-            /* align-items: center; */
-            width: 50%;
-            margin: 0 auto;
+
+    #hero #spotlight section.left div.bottom div.content a.button {
+        display: flex;
+        justify-content: center;
+        width: 50%;
+        margin: 0 auto;
     }
-    #hero #spotlight section.left div.bottom div.content p{
+
+    #hero #spotlight section.left div.bottom div.content p {
         text-align: center;
     }
+
     #hero #spotlight section.right div.content {
         margin-top: 0px;
     }
+
     #contact section.wrapper div.bottom ul {
         flex-wrap: wrap;
 
     }
+
     #contact section.wrapper div.bottom ul li {
         width: 100%;
         text-align: center;
     }
+
     #contact section.wrapper div.bottom ul li span {
         margin-left: 10px;
     }
+
     footer section.wrapper div.head div.left h4 {
         font-size: 24px;
         font-weight: 600;
         letter-spacing: 13px;
         margin-bottom: 10px;
     }
+
     footer section.wrapper div.head div.left p {
         font-size: 12px;
     }
+
     footer section.wrapper div.head div.right div.list h5 {
         font-size: 12px;
         margin-bottom: 10px;
     }
+
     footer section.wrapper div.head div.right div.list ul {
         display: none
     }
-    footer section.wrapper div.head div.right{
+
+    footer section.wrapper div.head div.right {
         position: relative;
     }
+
     footer section.wrapper div.head div.right div.list div.social {
         position: absolute;
         left: 90px;
     }
+
     footer section.wrapper div.bottom {
         margin: 75px 0 0px 0;
     }
+
     footer section.wrapper div.bottom div.first span {
         font-size: 10px;
     }
+
     footer section.wrapper div.bottom div.last {
         width: 44%;
     }
+
     footer section.wrapper div.bottom div.last ul li a {
         font-size: 10px;
     }
-    
-   
 
-    
+
+
+
 }
